--- a/exercise_2/viz.css
+++ b/exercise_2/viz.css
@@ -1,9 +1,9 @@
 .map{
     height:500px;
-    width:1000px;
+    width:100%;
 }
 
 .drilldown{
     height:500px;
-    width:1000px;
+    width:100%;
 }
