more layout changes, selected country labels

--- a/exercise_2/viz.css
+++ b/exercise_2/viz.css
@@ -1,6 +1,6 @@
 .map{
     height:500px;
-    width:960px;
+    width:570px;
 }
 
 .drilldown{
@@ -35,4 +35,9 @@
     margin: -2px 0 0 0;
     top: 100%;
     left: 0;
+}
+/*************/
+
+.selected-country{
+
 }
