--- a/exercise_2/css/viz.css
+++ b/exercise_2/css/viz.css
@@ -34,6 +34,7 @@ body{
 }
 
 .track {
+    stroke: #bbb;
     stroke-width: 10px;
 }
 
@@ -44,31 +45,37 @@ body{
 }
 
 .sel-range{
+    stroke: #737373;
     stroke-width: 8px;
 }
 
 .handle {
+    fill: #525252;
     stroke: #000;
     stroke-opacity: 0.5;
     stroke-width: 1.25px;
 }
 .handle:hover{
- }
+    fill: #969696;
+}
 .handle.active {
-  }
+    fill: #969696;
+}
 
 .legend text{
-
+    fill:#bdbdbd;
     font-weight:bold;
     font-size:14px;
 }
 
 .filter-button.active{
+    background-color: #525252 !important;
 }
 
 .filter-button{
-   font-weight: bold !important;
-
+    background-color:#737373 !important;
+    font-weight: bold !important;
+    color:#bdbdbd !important;
 }
 
 div.tooltip {
@@ -78,6 +85,7 @@ div.tooltip {
 
     padding: 10px;
 
-
+    background: #bdbdbd;
+    border: 1px solid #525252;
     pointer-events: none;
 }
