--- a/Final_Project/css/viz.css
+++ b/Final_Project/css/viz.css
@@ -24,3 +24,29 @@ body {
   padding: 14px;
   text-align: center;
 }
+
+.states :hover {
+  fill: #6F257F;
+}
+
+.state-borders {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 0.5px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
+}
+
+.counties :hover {
+  fill: #6F257F;
+}
+
+.county-borders {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 0.5px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
+}
